bk_ida/gccida/g0/distribute_notes
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12592:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
next_note = (  struct rtx_def *)notes[1]; 
                                ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12613:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
temd = ( rtx)i3[1]; 
             ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12730:15: error: invalid operands to binary expression ('struct rtx_def' and 'long long')
if ( place[4] != notes->fld[0].rtwint ) 
     ~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12738:16: error: invalid operands to binary expression ('struct rtx_def' and 'long long')
if ( place2[4] != notes->fld[0].rtwint ) 
     ~~~~~~~~~ ^  ~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12814:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( rtx)temd[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12871:29: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
links = (  struct rtx_def *)temd[3]; 
                            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12886:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
temd = ( rtx)temd[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12933:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = mode_class_0[*( unsigned __int8 *)( notes->fld[0].rtwint + 2)] == MODE_COMPLEX_INT 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12934:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( unsigned __int8 *)( notes->fld[0].rtwint + 2)] == MODE_COMPLEX_FLOAT; 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12961:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = mode_class_0[*( unsigned __int8 *)( notes->fld[0].rtwint + 2)] == MODE_COMPLEX_INT 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12962:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( unsigned __int8 *)( notes->fld[0].rtwint + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12995:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( teme = ( rtx)place[1]; rtx_class[*( _WORD *)teme] != 105; teme = ( rtx)teme[1] ) 
                   ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:12995:78: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( teme = ( rtx)place[1]; rtx_class[*( _WORD *)teme] != 105; teme = ( rtx)teme[1] ) 
                                                                             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:13043:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[reg_raw_mode[ia]] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:13044:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[reg_raw_mode[ia]] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:13076:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)*( _WORD *)notes, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:13076:12: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
( rtx_code)*( _WORD *)notes, 
~~~~~~~~~~~^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/combine.c:13077:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)notes + 2), 
  ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_notes/src/obj/combine.o] Error 1
